Fix for bug 182423. Look for conduit mgr dll in the registry entry for "Software\\U.S. Robotics\\Pilot Desktop\\Core" as well and restore registry back to point to Palm install dir after uninstall. r=ssu, sr=sspitzer.